--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -360,14 +360,6 @@ section {
 			position: relative;
 			margin-bottom: 30px;
 
-			&::after {
-				content: '';
-				display: block;
-				width: 100%;
-				height: 1px;
-				background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
-			}
-
 			h2 {
 				text-align: center;
 				font-size: 50px;
@@ -438,7 +430,20 @@ section {
         } // &[data-content="hero"]
 		&[data-content="about"] {
             margin-top: 115vh;
+			min-height: 100vh;
+			margin-bottom: 0;
 			
+			.cndev__section--title {
+				
+				&::after {
+					content: '';
+					display: block;
+					width: 100%;
+					height: 1px;
+					background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
+				}
+			}
+
 			.cndev__section--content {
 				display: flex;
 				align-items: stretch;
@@ -511,12 +516,16 @@ section {
 		} // &[data-content="about"]
 
 		&[data-content="projects"] {
-			padding-bottom: 50px;
+			background: #fff;
+    		color: #000000;
+			padding-bottom: 150px;
+			padding-top: 100px;
+			margin-bottom: 0;
 
 			.cndev__section--content {
 				display: flex;
-				align-items: stretch;
-				justify-content: center;
+				align-items: center;
+				justify-content: space-between;
 				flex-wrap: wrap;
 				gap: 0 75px;
 
@@ -576,7 +585,6 @@ section {
 							}
 
 							&.active {
-								background: #fff !important;
 								color: var(--primary-color);
 								opacity: 1;
 							}
@@ -604,17 +612,20 @@ section {
 					}
 				}
 				
-				.left, .right {
-					width: 40%;
-				}
 				.left {
-					text-align: right;
-					
+					text-align: left;
+					box-shadow: 0 0 10px #00000036;
+					border-radius: 20px;
+					padding: 30px 40px;
+					flex-grow: 1;
+					width: 50%;
+
 					&--inner {
 						display: none;
 						flex-direction: column;
 						justify-content: space-between;
 						height: 100%;
+						gap: 25px;
 						
 						&.active {
 							display: flex;
@@ -622,35 +633,14 @@ section {
 						h3 {
 							font-size: 42px;
 							min-height: 60px;
-							margin-bottom: 10px;
+							margin-bottom: 20px;
 							font-family: monospace;
-						}
-						.separator{
-							&::before {
-								content: '';
-								margin: 15px 0 20px;
-								display: block;
-								width: 100%;
-								height: 1px;
-								// background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
-								background: linear-gradient(240deg, #ffffffa2 0%, #00000000 50%);
-							}
 						}
 						.project-links {
 							display: flex;
 							flex-wrap: wrap;
-							justify-content: flex-end;
+							justify-content: flex-start;
 							gap: 0 10px;
-
-							&::before {
-								content: '';
-								margin: 25px 0 20px;
-								display: block;
-								width: 100%;
-								height: 1px;
-								// background: linear-gradient(90deg, #00000000 35%, #ffffffa2 50%, #00000000 65%);
-								background: linear-gradient(240deg, #ffffffa2 0%, #00000000 30%);
-							}
 							a {
 								font-size: 18px;
 								border: 1px solid transparent;
@@ -696,6 +686,7 @@ section {
 					justify-content: center;
 					align-items: center;
 					gap: 35px;
+					width: fit-content;
 
 					.pc-mockup {
 						position: relative;
@@ -839,7 +830,7 @@ section {
 						display: block;
 						width: 100%;
 						height: 1px;
-						background: linear-gradient(90deg, rgba(0, 0, 0, 0) 40%, rgba(255, 255, 255, 0.6352941176) 50%, rgba(0, 0, 0, 0) 60%);
+						background: linear-gradient(90deg, rgba(0, 0, 0, 0) 35%, rgba(255, 255, 255, 0.6352941176) 50%, rgba(0, 0, 0, 0) 65%);
 						margin-bottom: 18px;
 					}
 				}
@@ -867,7 +858,7 @@ section {
 			}
 			&--inner {
 				width: 1000px;
-				background: linear-gradient(360deg, #0807082a, #00000000);
+				background: rgba(8, 7, 8, 0.4784313725);
 				backdrop-filter: blur(20px);
 			}
 			&--logo, &--scroll {
